tests/rosetta/out/Smalltalk/character-codes-5.out
'?'
'?'
Object: '?' error: did not understand #+
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
String(Object)>>doesNotUnderstand: #+ (SysExcept.st:1448)
UndefinedObject>>executeStatements (/tmp/character-codes-5.st:16)
