tests/rosetta/out/Smalltalk/character-codes-5.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| chr |
chr := [:n | ((n = 97)) ifTrue: [
'a'.
] .
((n = 960)) ifTrue: [
'π'.
] .
((n = 65)) ifTrue: [
'A'.
] .
'?'. ].
Transcript show: (chr value: 97) printString; cr.
Transcript show: (chr value: 960) printString; cr.
Transcript show: (((chr value: 97) + (chr value: 960))) printString; cr.
